--- a/src/css/paper.css
+++ b/src/css/paper.css
@@ -3,3 +3,10 @@
     height: 100%;
     overflow: hidden;
 }
+
+.paper_1{
+    margin-top: 20%;
+    margin-left: 20%;
+    width:80%;
+    overflow: hidden;
+}
