style: 调整container的大小;

--- a/src/css/leftRifht.css
+++ b/src/css/leftRifht.css
@@ -1,7 +1,7 @@
 .left_{
     position: absolute;
     top: 50%;
-    left:1%;
+    /* left:1%; */
     user-select: none;
     pointer-events: none;
 }
